@@ -129,6 +129,7 @@ t/test_3_42.t
 t/test_3_44.t
 t/test_3_45.t
 t/test_3_47.t
+t/test_3_48.t
 t/test_changes.t
 t/test_memory.t
 t/test_wrapped.t
